# liburing-hdr-only

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
examples/: Makefile  io_uring-close-test.c  io_uring-cp.c  io_uring-test.c  io_uring-udp.c  link-cp.c  poll-bench.c  rsrc-update-bench.c  send-zerocopy.c  ucontext-cp.c
include/: io_uring_version.h  lib.h  liburing.h
include/arch/generic/: lib.h
include/liburing/: barrier.h
liburing/: barrier.h  compat.h  io_uring.h  io_uring_version.h  lib.h  liburing-hdr-only.h  liburing.h
liburing/arch/: syscall-defs.h
liburing/arch/aarch64/: lib.h  syscall.h
liburing/arch/generic/: syscall.h
liburing/arch/riscv64/: lib.h  syscall.h
liburing/arch/x86/: syscall.h
src/: lib.h  liburing.h  nolibc.c  queue.c  setup.c  syscall.c  syscall.h
src/liburing/: compat.h  io_uring_version.h
test/: 232c93d07b74.c  35fa71a030ca.c  500f9fbadef8.c  7ad0e4b2f83c.c  8a9973408177.c  917257daa0fe.c  Makefile  a0908ae19763.c  a4c0b3decb33.c  accept-link.c  accept-reuse.c  accept-test.c  accept.c  across-fork.c  b19062a56726.c  b5837bd5311d.c  buf-ring.c  ce593a6c480a.c  close-opath.c  connect-rep.c  connect.c  coredump.c  cq-full.c  cq-overflow.c  cq-peek-batch.c  cq-ready.c  cq-size.c  d4ae271dfaae.c  d77a67ed5f27.c  defer-taskrun.c  defer.c  double-poll-crash.c  drop-submit.c  eeed8b54e0df.c  empty-eownerdead.c  eploop.c  eventfd-disable.c  eventfd-reg.c  eventfd-ring.c  eventfd.c  (+127 more)
